# soundfleet-player

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
soundfleet_player/: cache.py  client.py  conf.py  device.py  noise_generator.py  player.py  scheduler.py  storage.py  types.py  utils.py
soundfleet_player/media_backends/: base.py  dummy.py  vlc.py
tests/: fixtures.py  test_client.py  test_device.py  test_noise_generator.py  test_player.py  test_scheduler.py  test_storage.py  utils.py
