[metadata]
name = soundfleet-player
description = Soundfleet player
author = Soundfleet team
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux (raspi OS)

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = soundfleet_player

[flake8]
max-line-length = 80
per-file-ignores =
    *.py:E203 E231 W503
